--- a/pl-theory.tex
+++ b/pl-theory.tex
@@ -51,6 +51,8 @@
 
 \newcommand\sedel{$\mathsf{SEDEL}$\xspace}
 
+\newcommand\visitor{\textsc{Visitor}s\xspace}
+
 \newcommand{\cmark}{\ding{51}}%
 \newcommand{\xmark}{\ding{55}}%
 
