--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -30,8 +30,8 @@ mechanism.
 \section{(Disjoint) Intersection Types}
 
 
-A central theme in this thesis is \textit{intersection types} (usually written $\inter{A}{B}$). Intersection
-types~\citep{pottinger1980type,coppo1981functional} have a long history in
+A central theme of this thesis is \textit{intersection types} (usually written $\inter{A}{B}$). Intersection
+types~\citep{pottinger1980type, coppoInter} have a long history in
 programming languages. They were originally introduced to characterize exactly
 all strongly normalizing lambda terms. Since then, starting with
 \citeauthor{reynolds1988preliminary}'s work on
