--- a/Sources/Nested/overview.tex
+++ b/Sources/Nested/overview.tex
@@ -185,8 +185,7 @@ $ 1 : \inter{\mathsf{Int}}{\mathsf{Int}}$ creates the equivalent value implicitl
 % The consequence of this relaxation of disjointness is a much simplified
 % type system for \namee.
 In short, duplication is harmless and subtyping only generates duplicated values
-for non-disjoint types. We refer to \cref{chap:coherence:simple} for a detailed
-discussion of coherence.
+for non-disjoint types. We shall return to this point in \cref{chap:coherence:simple}.
 
 % Disjoint intersection types ensure unambiguity and conflicts are
 % statically detected and manually resolved by programmers. This
