--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1288,3 +1288,24 @@ keywords = "Featherweight Java, Trait, Type system"
   booktitle =	{European Conference on Object-Oriented Programming  (ECOOP)},
   year =	{2018},
 }
+
+@article{coppoInter,
+author = {Coppo, Mario and Dezani-Ciancaglini, Mariangiola},
+year = {1978},
+month = {01},
+pages = {139-156},
+title = {A new type assignment for $\lambda$-terms},
+volume = {19},
+booktitle = {Archiv. Math. Logik}
+}
+
+@BOOK{CurryFeys,
+  AUTHOR = {Haskell B. Curry and Robert Feys},
+  TITLE = {Combinatory Logic},
+  VOLUME = 1,
+  PUBLISHER = {North Holland},
+  YEAR = 1958,
+  CHECKED = {Not checked},
+  COMPLETE = {Incomplete},
+  NOTE = {Second edition, 1968}
+}
