--- a/Thesis.tex
+++ b/Thesis.tex
@@ -227,7 +227,7 @@ diploma or other qualifications.
 \mainmatter
 
   \include{Sources/Introduction}
-  \include{Sources/Background}
+  \input{Sources/Background.mng}
 
 
   \part{Type Systems}
