--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -135,7 +135,7 @@ support \emph{first-class classes}. In those languages classes are first-class
 values and, like any other values, they can be passed as an argument, or
 returned from a function. Furthermore first-class classes support \emph{dynamic
   inheritance}: i.e., they can inherit from other classes at \emph{runtime},
-enabling programmers to abstract over the inheritance hierarchy, for example,
+enabling programmers to abstract over the inheritance hierarchy. For example,
 mixins~\citep{bracha1990mixin} become programmer-defined constructs -- a mixin is
 simply a function that takes a class as an argument and returns a subclass. In
 contrast, type system limitations prevent most statically-typed languages from
